--- a/sapphire-web/index.html
+++ b/sapphire-web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sapphire-web</title>
+    <title>Sapphire AI | Claude V1.0</title>
   </head>
   <body>
     <div id="app"></div>
